app/style.styl
@font-face
  font-family 'Inconsolata'
  font-style normal
  font-weight 400
  src local('Inconsolata'), url('inconsolata.woff') format('woff')

body
  background none
  font-family 'Inconsolata'
  pointer-events none
  height 100%
  width 100%

.controls
  width 30%
  min-width 400px

  .control
    pointer-events bounding-box

  [class*="col-"]
    padding 1px

  .btn
    margin 0 2px 0

input.form-control[type="range"]
  box-shadow none
  padding-left 0
  padding-right 0

.progress .progress-desc
  position absolute
  left 2px

#info
  pointer-events none
  padding-top 5px

  .breadcrumb
    display inline-block

#team_blue
  .team_name
    text-shadow #99e 0 0 1px
  .badge
    background-color #99e

#team_yellow
  .team_name
    text-shadow #ee6 0 0 1px
  .badge
    background-color #ee6

#team_blue .badge, #team_yellow .badge
  text-shadow rgba(0, 0, 0, 0.6) 0 0 3px
  box-shadow rgba(0, 0, 0, 0.4) 0 0 3px

#field
  position fixed
  top 0
  left 0
  bottom 0
  right 0
  height 100%
  width 100%
  z-index -1
  background #080
  pointer-events all

.robot
  text
    fill #000
    font-size 120px
    text-anchor middle
    alignment-baseline central

  &:hover
    cursor default
    path
      stroke black
      stroke-width 5px

.ball:hover
  stroke black
  stroke-width 5px

.yellow
  fill #ff0

.blue
  fill #00f

.ball
  fill #fb0

.grass
  fill #080

.field-line
  fill #fff

.time-left
  fill rgba(0, 0, 0, 0.4)
  font-size 180px
  text-anchor middle
  white-space pre

.team-name
  fill rgba(0, 0, 0, 0.4)
  font-size 300px

.grid
  stroke black
  stroke-width 1px
  stroke-opacity 0.8

.tip
  text-rendering optimizeLegibility
  text-shadow 0 0 5px rgba(255, 255, 255, 0.7)
  font-size 16px
  color black

.jscli
  font-size 14px
  max-height 86px

  output&
    padding 0
    max-height 126px

  input&
    line-height 14px
    outline none
    pointer-events bounding-box

  .success
    color rgb(152, 243, 174)

  .fail
    color rgb(247, 170, 170)

  &-wrap
    background rgba(0, 0, 0, 0.50)
    width 600px

  &-container
    pointer-events none

